src/objects/smagicinteract__SMS_Magic_Package_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This setting will store the package type.</description>
    <fields>
        <fullName>smagicinteract__Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Package1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Package2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Package3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trial</label>
        <type>Checkbox</type>
    </fields>
    <label>SMS Magic Package Type</label>
</CustomObject>